fix spacing

--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 /* change box-size to border box */
 body * {
     box-sizing: border-box;
+    margin: 0 auto;
 }
 
 body {
@@ -67,7 +68,6 @@ hr{
 
 h2 {
     margin: 0;
-    padding-top: 3em;
     color: rgb(55, 91, 183);
     font-family: 'Merriweather', serif;
     font-weight: bold;
@@ -92,7 +92,7 @@ h3{
 #about {
     display: inline-block;
     color: black;
-    padding-top: 200px;
+    padding: 15% 0;
     height: 100%;
     margin-bottom: 1.2em;
 }
@@ -103,7 +103,6 @@ h3{
     width: 240px;
     box-shadow: 1px 1px 10px black;
     border-radius: 50px;
-    /* padding-bottom: 0px; */
     position: relative;
     animation: profilePic 1.5s;
 }
@@ -122,7 +121,6 @@ h3{
 #projects {
     display: block; 
     background: rgba(233, 233, 233, 0.945);
-    /* padding: 4em 0; */
 }
 
 
@@ -145,7 +143,7 @@ h3{
 .project-tile * {
     box-sizing: border-box;
     position: relative;
-    margin: 1em;
+    margin: 1em 0;
 }
 
 #projects img {
@@ -154,7 +152,6 @@ h3{
     max-height: 100%;
     margin:0;
     vertical-align: top;
-    z-index: 0;
     margin-bottom: 1em;
 }
 
@@ -202,13 +199,12 @@ div .quote{
 
 /* Contact Section */
 #contact{
-    padding-bottom: 20px;
+    padding: 5% 0;
 }
 .contactIntro, #contactForm {
     position: relative;
     left: 20%;
     display: block;
-    /* flex: wrap; */
     text-align: center;
     width: 60%;
 }
@@ -283,7 +279,7 @@ buttons to fade in(html, js, css and etc)  */
 @keyframes slowFadeOut {
     0% {
         opacity: 1;
-        transform: scale(1.1);
+        transform: scale(1);
     }
     100% {
         opacity: 0.3;
